--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
