--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-confetti": "^6.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
