--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.8.1",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.4.7",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
